--- a/personagens.html
+++ b/personagens.html
@@ -4,18 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/cinderela.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="css/styleperso.css">
     <title>Personagens - Cinderela</title>
 </head>
 <body>
     <header align="center">
         <div class="cabecalho">
-            <a class="links_cabecalho" href="index.html">Home</a>
+            <a class="links_cabecalho" href="index (1).html">Home</a>
             <a class="links_cabecalho" id="espacamento_link" href="historia.html">História</a>
             <a class="links_cabecalho" href="personagens.html">Personagens</a>
         </div>
     </header>
     <main>
-
+        <br><br>
+        <h2 class="conteudo_texto">Cinderela</h2>
+        <img class="conteudo_img" src="img/persocin.avif" alt="Cinderela" width="350px" height="450px" vspace="20px" hspace="780px">
+            <p class="conteudo_texto">Uma jovem doce, gentil e sonhadora, mesmo diante das dificuldades. Vive como criada na própria casa, mas nunca perde a esperança de uma vida melhor. Seu coração puro e sua coragem fazem com que, com a ajuda da magia, ela transforme sua realidade e inspire todos ao seu redor.</p>
+        <h2 class="conteudo_texto">Madrasta</h2>
+        <img class="conteudo_img" src="img/persomadrasta.jpg" alt="Madrasta" width="350px" height="450px" vspace="20px" hspace="780px">
+            <p class="conteudo_texto">Fria, controladora e vaidosa, é a mulher que casou com o pai de Cinderela e, após sua morte, a trata como serva. Protege suas próprias filhas e faz de tudo para impedir que Cinderela tenha qualquer chance de felicidade ou destaque.</p>
+        <h2 class="conteudo_texto">Anastacia e Drizella</h2>
+         <img class="conteudo_img" src="img/persodrieanas.jpg" alt="Anastacia e Drizella" width="350px" height="450px" vspace="20px" hspace="780px">
+            <p class="conteudo_texto">As filhas da madrasta. São mimadas, egoístas e invejosas. Tentam constantemente se sobressair às custas de Cinderela, mas não possuem o encanto e a doçura natural dela. Costumam ser usadas como alívio cômico pela sua falta de graça e exageros.</p>
+        <h2 class="conteudo_texto">Fada Madrinha</h2>
+         <img class="conteudo_img" src="img/persofadadinda.jpg" alt="Fada Madrinha" width="350px" height="450px" vspace="20px" hspace="780px">
+            <p class="conteudo_texto">A figura mágica que aparece no momento mais difícil de Cinderela, mostrando que com um pouco de fé e magia, sonhos podem sim se tornar realidade. É responsável por transformar a jovem em uma princesa por uma noite — com prazo até a meia-noite.</p>
+        <h2 class="conteudo_texto">Principe</h2>
+         <img class="conteudo_img" src="img/persoprincipe.webp" alt="Principe" width="350px" height="450px" vspace="20px" hspace="780px">
+            <p class="conteudo_texto">O herdeiro do trono que se apaixona por Cinderela no baile, sem saber sua verdadeira identidade. Representa o ideal romântico, mas também o desejo de encontrar alguém verdadeiro, além das aparências e da obrigação real.</p>
+        <h2 class="conteudo_texto">Jaq e Tatá (Gus)</h2>
+         <img class="conteudo_img" src="img/persoratinhos.jpg" alt="Ratinhos Jaq e Tatá(Gus)" width="350px" height="450px" vspace="20px" hspace="780px">
+            <p class="conteudo_texto">Os ratinhos amigos e fiéis de Cinderela. Engraçados, corajosos e leais, estão sempre dispostos a ajudá-la e proteger seu sonho. Muitas vezes, são os responsáveis por planos que salvam o dia.</p>
+        <div align="center">
+            <a id="link_topo" href="#">&#129498; Vá de carruagem para o topo! &#127775;</a>
+        </div>
     </main>
     <footer class="rodape" align="center">
         <p class="rodape_autoras">
