--- a/historia.html
+++ b/historia.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/cinderela.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="css/stylehist.css">
     <title>História - Cinderela</title>
 </head>
 <body>
     <header align="center">
         <div class="cabecalho">
-            <a class="links_cabecalho" href="index.html">Home</a>
+            <a class="links_cabecalho" href="index (1).html">Home</a>
             <a class="links_cabecalho" id="espacamento_link" href="historia.html">História</a>
             <a class="links_cabecalho" href="personagens.html">Personagens</a>
         </div>
     </header>
     <main>
         <div class="conteudo_principal">
-            <h2 class="conteudo_titulo">Resumo do Filme</h2>
+            <h2>Resumo do Filme</h2>
             <p class="conteudo_texto">
                 Cinderela (1950) é um clássico animado da Disney que conta a história de uma jovem gentil e bondosa,
                 que vive sob o domínio cruel de sua madrasta, Lady Tremaine, e das duas meias-irmãs, Drizella e Anastasia. 
@@ -29,7 +30,7 @@
             <img class="conteudo_img" width="350px" height="450px" vspace="20px" hspace="780px" src="img/cinderela_1950_capa.jpg" alt="reynavalorant">
         </div>
         <div class="conteudo_principal">
-            <h2 class="conteudo_titulo">Clímax</h2>
+            <h2>Clímax</h2>
             <p class="conteudo_texto">
                 No baile, Cinderela encanta o príncipe, e os dois dançam apaixonadamente sem saberem o nome um do outro. Quando o relógio marca meia-noite, ela foge apressadamente, deixando para trás apenas um sapatinho de cristal. O príncipe, decidido a encontrá-la, envia o Grão-Duque em uma busca por todo o reino, pedindo que cada jovem experimente o sapatinho.
 
@@ -38,7 +39,7 @@
             <img class="conteudo_img" src="img/cinderela-removebg-preview.png" width="350px" height="450px" vspace="20px" hspace="780px" alt="">
         </div>
         <div align="center">
-            <a id="link_topo" href="#">Voltar para o topo!</a>
+            <a id="link_topo" href="#">&#127775;Suba antes que a magia acabe, mas cuidado com o sapatinho.&#129407;</a>
         </div>
     </main>
     <footer class="rodape" align="center">
