--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                 o filme mistura elementos mágicos e moralistas, refletindo valores da época em que foi produzido. 
                 A animação marcou uma nova era de sucesso para o estúdio, ajudando a consolidar o padrão das "princesas Disney".
             </p>
-            <img class="conteudo_img" src="img/capa_filme_cinderela.webp" alt="capa do filme da cinderela 1950" width="350px" height="450px" vspace="20px" hspace="780px">
+            <div><a href="https://www.disneyplus.com/pt-br/browse/entity-f7272318-0b08-46f5-b89e-284b3e8a7234" target="_blank">
+            <img class="conteudo_img" src="img/capa_filme_cinderela.webp" alt="capa do filme da cinderela 1950" width="350px" height="450px" vspace="20px" hspace="780px"></a></div>
         </div>
         <div class="conteudo_principal">
             <h2 class="conteudo_titulo" align="center">Crítica Social do Filme</h2>
@@ -49,4 +50,5 @@
         </p>
     </footer>
 </body>
+
 </html>
